update bg image

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,7 @@ body, html {
 }
 
 .bgstyle {
-    background-image: url("image/IMG_BACK.png");
+    background-image: url("image/IMG_BACK_2.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
