--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,13 +1,51 @@
-div.top-container {
-    top: 250px;
-    position: relative;
-    text-align: center;
-}
-
 body, html {
     font-family: 'Montserrat', normal;
     height: 100%;
 }
+
+h1 {
+    color: rgb(21, 169, 149);
+    font-family: 'Sacramento', cursive;
+    font-size: 120px;
+    font-weight: bold;
+    line-height: 0;
+}
+
+h3 {
+    color: rgb(21,169,149);
+    font-family: 'Montserrat', normal;
+    height: 100%;
+}
+
+h5 {
+    color: rgb(21, 169, 149);
+    font-family: 'Merriweather', normal;
+    font-size: 30px;
+    margin: 5px;
+    letter-spacing: 2px;
+}
+
+.top-container {
+    padding-top: 250px;
+    position: relative;
+    text-align: center;
+}
+
+.mid-container {
+    margin-top: 800px;
+    background-color: white;
+    position: relative;
+        text-align: center;
+}
+
+.bot-container {
+    /* background-color: white; */
+    padding-top: 250px;
+    /* position: relative; */
+        text-align: center;
+    height: 200px;
+}
+
 
 .bgstyle {
     background-image: url("image/IMG_BACK_2.jpg");
@@ -17,19 +55,21 @@ body, html {
     background-repeat: no-repeat;
 }
 
-h1 {
-    color: rgb(21, 169, 149);
-    font-family: 'Sacramento', cursive;
-    font-size: 120px;
-    margin: 5px;
+
+.skills {
+
+}
+.skill-row {
+
 }
 
-h5 {
-    color: rgb(21, 169, 149);
-    font-family: 'Merriweather', normal;
-    font-size: 30px;
-    margin: 5px;
-    letter-spacing: 2px;
+.code-img {
+    width: 25%;
+    float: left;
+}
+
+.chilli-img {
+    width: 25%;
 }
 
 
@@ -68,4 +108,109 @@ h5 {
 .roundcorner {
     border-radius: 50px;
     padding: 20px;
+}
+
+.scroll-wrapper {
+    display: flex;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 3em;
+    padding-bottom: 8rem;
+}
+
+.i--container {
+    /* display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox; */
+    display: flex;
+    /* -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center; */
+    justify-content: center;
+}
+
+.scrollcontainer {
+    position: relative;
+    width: 28px;
+    height: 8px;
+}
+
+.chevron {
+  position: absolute;
+  width: 28px;
+  height: 8px;
+  opacity: 0;
+  transform: scale3d(0.5, 0.5, 0.5);
+  animation: move 3s ease-out infinite;
+}
+
+.chevron:first-child {
+  animation: move 3s ease-out 1s infinite;
+}
+
+.chevron:nth-child(2) {
+  animation: move 3s ease-out 2s infinite;
+}
+
+.chevron:before,
+.chevron:after {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 51%;
+  background: #fff;
+}
+
+.chevron:before {
+  left: 0;
+  transform: skew(0deg, 30deg);
+}
+
+.chevron:after {
+  right: 0;
+  width: 50%;
+  transform: skew(0deg, -30deg);
+}
+
+@keyframes move {
+  25% {
+    opacity: 1;
+
+  }
+  33% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+  67% {
+    opacity: 1;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+  }
+}
+
+.text {
+  display: block;
+  margin-top: 75px;
+  margin-left: -30px;
+  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+  white-space: nowrap;
+  opacity: .25;
+  animation: pulse 2s linear alternate infinite;
+}
+
+@keyframes pulse {
+  to {
+    opacity: 1;
+  }
 }
